--- a/design/sass/main.scss
+++ b/design/sass/main.scss
@@ -105,6 +105,7 @@
                 height: 16.6em;
                 margin-bottom: 2.5rem;
                 border-radius: 7px 7px 0 0;
+                width: 100%;
                 .layer {
                     height: 100%;
                     width: 100%;
