--- a/design/sass/_generales.scss
+++ b/design/sass/_generales.scss
@@ -18,6 +18,8 @@ $primaryFfamily: 'Inter', sans-serif;;
 $secondaryFfamily:'Lexend Deca', sans-serif;;
 
 * {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
