--- a/design/sass/main.scss
+++ b/design/sass/main.scss
@@ -98,7 +98,7 @@
             border-radius: 7px;
             .image {
                 background: url('../../images/image-header-mobile.jpg');
-                background-repeat: repeat;
+                background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
                 width: 25em;
