--- a/design/css/main.css
+++ b/design/css/main.css
@@ -107,7 +107,7 @@ body {
   }
   .container .content-container .image {
     background: url("../../images/image-header-mobile.jpg");
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     width: 25em;
